<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:padding="@dimen/padding_titulo"
        android:background="@color/colorAccent"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/ancho_logo"
        android:layout_height="@dimen/alto_logo"
        app:srcCompat="@drawable/jesuitas_logo"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintRight_toRightOf="parent"
         />
    <ImageView
        android:id="@+id/img_grande"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_imggrande"
        app:srcCompat="@drawable/jesuitasrioja"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        />

    <TextView
        android:id="@+id/sub_head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura_textos_abajo"
        android:text="@string/texto_subhead"
        android:padding="@dimen/padding_textos_abajo"
        app:layout_constraintTop_toBottomOf="@+id/img_grande"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/location_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura_textos_abajo"
        android:text="@string/texto_location"
        android:padding="@dimen/padding_textos_abajo"
        app:layout_constraintTop_toBottomOf="@+id/sub_head"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        />

    <ImageView
        android:id="@+id/location"
        android:layout_width="@dimen/ancho_iconos"
        android:layout_height="@dimen/altura_iconos"
        app:srcCompat="@drawable/location"
        app:layout_constraintTop_toBottomOf="@+id/sub_head"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/padding_iconos"

        />
    <TextView
        android:id="@+id/mail_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura_textos_abajo"
        android:text="@string/texto_mail"
        android:padding="@dimen/padding_textos_abajo"
        app:layout_constraintTop_toBottomOf="@+id/location_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"

        />

    <ImageView
        android:id="@+id/mail"
        android:layout_width="@dimen/ancho_iconos"
        android:layout_height="@dimen/altura_iconos"
        app:srcCompat="@drawable/email"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/padding_iconos"
        />

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura_textos_abajo"
        android:padding="@dimen/padding_textos_abajo"
        android:text="@string/texto_numtel"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/mail_text" />

    <ImageView
        android:id="@+id/phone"
        android:layout_width="@dimen/ancho_iconos"
        android:layout_height="@dimen/altura_iconos"
        app:srcCompat="@drawable/phone"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/padding_iconos"
        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="@dimen/ancho_iconos"
        android:layout_height="@dimen/altura_iconos"
        android:layout_marginTop="@dimen/margenbutton"
        android:layout_marginEnd="@dimen/margenbutton"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_text"
        app:srcCompat="@drawable/megusta" />


</androidx.constraintlayout.widget.ConstraintLayout>